[`kafka-in-kafka-out`/`] Fix virtual threads implementation